--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body    {
   
 }
 h1 {
-    color: darkcyan;
+    color: red;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 30px ;
 }
@@ -36,6 +36,15 @@ img.float-left.mr-2 {
 }
 .card-body{
     background-color: black;
+}
+.btn{
+    display: inline-block;
+    color: red;
+    position: relative;
+    border: transparent;
+}
+.navbar-dark .navbar-brand{
+    color: white;
 }
 img.card-img-top1 {
   
