--- a/style.css
+++ b/style.css
@@ -18,7 +18,9 @@ a{
 }
 
 p{
-    font-family:Arial, Helvetica, sans-serif ;
+    font-family:'Times New Roman', Times, serif;
+    font-size: 20px;
+    letter-spacing: 1.0;
 }
 
 h1  {
