--- a/style.css
+++ b/style.css
@@ -37,8 +37,11 @@ h1  {
  }
 p.lead{
     padding: 20px;
+    font-size: 30px;
     font-weight: bold;
-    color: dodgerblue;
+    color: #0055FF ;
+    opacity: 100%;
+    background-color:chocolate;
 }
 
 img.float-left.mr-2 {
@@ -54,9 +57,16 @@ img.float-left.mr-2 {
     color: red;
     position: relative;
     border: transparent;
+    margin-left: auto;
+}
+.fab{
+  display: inline-block;
+  position: relative;
+  color: red;
+  float: left;
 }
 .navbar-dark .navbar-brand{
-    color: white;
+    color: red;
 }
 img.card-img-top1 {
   
@@ -77,11 +87,21 @@ img.card-img-top1 {
     background-color: black;
     background-image: url(images/background.jpeg);
     height: 800px;
-    opacity: 95%;
+    opacity: 60%;
 }
 .jumbotron1{
-    background-image:url(images/contactpagebackgroung.png);
+    background-image:url(images/blackbackground.jpg);
     height: 800px;
+    opacity: 95%;
+}
+.jumbotron2{
+    background-image:url(images/slickbackground.jpeg);
+    height: 1000px;
+    opacity: 95%;
+}
+.jumbotron3{
+    background-image:url(images/44-442751_dark-light.jpg);
+    height: 1400px;
     opacity: 95%;
 }
 a.navbar-brand  {
@@ -92,10 +112,12 @@ strong{
     display: inline-block;
 }
 .container {
-    padding: 30px;
+    padding: 20px;
+    margin-top: 10px;
 
-  
+    /* background-image: url(images/slickbackground.jpeg); */
 }
+
 /* article.col-12.card {
     height: 1000px;
 } */
