--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: grey;
+    background-color: black;
     color: white;
     text-align: center;
     padding: 5px;
