--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ p{
     font-family: 'Caveat';
     font-size: 20px;
     letter-spacing: 1.0;
-    color: red;
+    color: gray;
 }
 .note{
     font-family: 'Caveat';
